<resources>
    <string name="app_name">MyLabApptng2101</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="signin">Sign In</string>
    <string name="email_label"></string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_repassword">Retype Password</string>
    <string name="title_home">Home</string>
    <string name="title_blogs">Blogs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_link">Full Post</string>
    <string name="action_settings">Settings</string>
</resources>